scripts/nullaway/annotator/urld025f21ac3_mvattipulusu_Innovation2013_tgz-pJ8-com_usps_data_ManifestFileTestJ8.txt
../annotator/urld025f21ac3_mvattipulusu_Innovation2013_tgz-pJ8-com_usps_data_ManifestFileTestJ8/src/com/evs/data/util/DataTypes.java:426: error: [NullAway] dereferenced expression dateCheck is @Nullable
		 dateCheck.setLenient(lenient);
		          ^
    (see http://t.uber.com/nullaway )
../annotator/urld025f21ac3_mvattipulusu_Innovation2013_tgz-pJ8-com_usps_data_ManifestFileTestJ8/src/com/evs/data/util/DataTypes.java:456: error: [NullAway] dereferenced expression timeCheck is @Nullable
		timeCheck.setLenient(lenient);
		         ^
    (see http://t.uber.com/nullaway )
../annotator/urld025f21ac3_mvattipulusu_Innovation2013_tgz-pJ8-com_usps_data_ManifestFileTestJ8/src/com/evs/data/util/DataTypes.java:915: error: [NullAway] dereferenced expression value is @Nullable
            dateTime.setTime(dateTimeConvert.parse(value.trim()));
                                                        ^
    (see http://t.uber.com/nullaway )
../annotator/urld025f21ac3_mvattipulusu_Innovation2013_tgz-pJ8-com_usps_data_ManifestFileTestJ8/src/com/usps/evs/vo/ManifestDetailRawLineV20Vo.java:59: error: [NullAway] initializer method does not guarantee @NonNull fields overlabelIndicator (line 27), overlabelNumber (line 29), customerReferenceNumber2 (line 30), recipientName (line 31), deliveryAddress (line 32), ancillaryServiceEndorsement (line 33), addressServiceParticipantCode (line 34), keyLine (line 35), returnAddress (line 36), returnAddressCity (line 37), returnAddressState (line 38), returnAddressZip (line 39), logisticMailingFacilityCRID (line 40), removalIndicator (line 41), altPic (line 45) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public ManifestDetailRawLineV20Vo() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urld025f21ac3_mvattipulusu_Innovation2013_tgz-pJ8-com_usps_data_ManifestFileTestJ8/src/com/usps/evs/vo/ManifestDetailRawLineV17Vo.java:54: error: [NullAway] initializer method does not guarantee @NonNull fields overlabelIndicator (line 24), overlabelNumber (line 26) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public ManifestDetailRawLineV17Vo() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urld025f21ac3_mvattipulusu_Innovation2013_tgz-pJ8-com_usps_data_ManifestFileTestJ8/src/com/usps/evs/vo/ManifestDetailRawLineV15Vo.java:64: error: [NullAway] initializer method does not guarantee @NonNull fields stc (line 22), barcodeConstruct (line 23), destinationFacilityType (line 24), postalCode (line 25), carrierRoute (line 26), logisticsManagerMailer (line 27), mailerOwnerMailerId (line 28), containerId1 (line 29), containerType1 (line 30), containerId2 (line 31), containerType2 (line 32), containerId3 (line 33), containerType3 (line 34), mailerOwnerCRID (line 35), fastReservationNumber (line 36), fastScheduledInductionDate (line 37), fastScheduledInducationTime (line 38), paymentAccountNumber (line 39), methodPayment (line 40), postOfficeAccountZip (line 41), meterSerialNumber (line 42), chargeBackCode (line 43), postageType (line 44), CSSCNumber (line 45), CSSCProductId (line 46), specialServiceCode4 (line 47), specialServiceFee4 (line 48), specialServiceCode5 (line 49), specialServiceFee5 (line 50), discountType (line 51), discountAmount (line 52), nonIncidentalEnclosureProcessCat (line 53), openDistributedContentsInd (line 54), manifestedSurchargeType (line 57), manifestedSurchargeAmount (line 58) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public ManifestDetailRawLineV15Vo() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urld025f21ac3_mvattipulusu_Innovation2013_tgz-pJ8-com_usps_data_ManifestFileTestJ8/src/com/usps/evs/vo/ManifestDetailRawLineVo.java:67: error: [NullAway] initializer method does not guarantee @NonNull fields picCode (line 14), classOfMail (line 15), destinationZip (line 16), destinationZipPlus4 (line 17), countryCode (line 18), postage (line 19), uomCode (line 20), weight (line 21), processingCategory (line 22), destinationRateIndicator (line 23), rateIndicator (line 24), zone (line 25), poBoxIndicator (line 26), waiverOfSignature (line 27), noWeekendHolidayDelivery (line 28), articleValue (line 29), codAmountDueSender (line 30), handlingCharge (line 31), specialServiceCode1 (line 32), specialServiceFee1 (line 33), specialServiceCode2 (line 34), specialServiceFee2 (line 35), specialServiceCode3 (line 36), specialServiceFee3 (line 37), length (line 38), width (line 39), height (line 40), dimensionalWeight (line 41), customerInternalReference (line 43), surchargeType (line 44), surchargeAmount (line 45), nonIncidentalEnclosureRateIndicator (line 46), nonIncidentalEnclosureClass (line 47), nonIncidentalEnclosurePostage (line 48), nonIncidentalEnclosureWeight (line 49), postalRoutingBarcodeIndicator (line 51) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public ManifestDetailRawLineVo() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urld025f21ac3_mvattipulusu_Innovation2013_tgz-pJ8-com_usps_data_ManifestFileTestJ8/src/com/usps/evs/vo/ManifestHeaderRawLineVo.java:42: error: [NullAway] initializer method does not guarantee @NonNull fields fileNumber (line 14), paymentAccountNumber (line 20), paymentMethod (line 21), eFileVersionNumber (line 25), fileRecordCount (line 28) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public ManifestHeaderRawLineVo() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urld025f21ac3_mvattipulusu_Innovation2013_tgz-pJ8-com_usps_data_ManifestFileTestJ8/src/com/usps/evs/vo/ManifestHeaderRawLineVoV20.java:53: error: [NullAway] initializer method does not guarantee @NonNull fields fileNumber (line 15), paymentAccountNumber (line 21), paymentMethod (line 22), eFileVersionNumber (line 26), fileRecordCount (line 29), applicationIdentifier (line 39), shipmentFee (line 45) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public ManifestHeaderRawLineVoV20() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urld025f21ac3_mvattipulusu_Innovation2013_tgz-pJ8-com_usps_data_ManifestFileTestJ8/src/com/usps/evs/vo/PicCode.java:295: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return dunsPkgidDzip;
		^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
